<resources>
    <string name="app_name">RE Outbreak Team Communicator</string>
    <string name="character_alyssa">Alyssa</string>
    <string name="character_cindy">Cindy</string>
    <string name="character_david">David</string>
    <string name="character_george">George</string>
    <string name="character_jim">Jim</string>
    <string name="character_kevin">Kevin</string>
    <string name="character_mark">Mark</string>
    <string name="character_yoko">Yoko</string>
    <string name="scenario_1_1">Outbreak</string>
    <string name="scenario_1_2">Below Freezing Point</string>
    <string name="scenario_1_3">The Hive</string>
    <string name="scenario_1_4">Hellfire</string>
    <string name="scenario_1_5">Decisions, Decisions</string>
    <string name="heading_main_menu">MAIN MENU</string>
    <string name="text_no_username">You do not have a username yet! Enter one below to create or join rooms. Your username will not be visible to other users; it is only used for rooms to identify who you are.</string>
    <string name="hint_enter_username">Enter a username&#8230;</string>
    <string name="button_set_username">Set Username</string>
    <string name="heading_rejoin_rooms">REJOIN YOUR COMRADES</string>
    <string name="text_no_rooms">You have not joined any rooms yet&#8230;</string>
    <string name="heading_create_room">CREATE ROOM</string>
    <string name="subheading_room_name">Room Name</string>
    <string name="subheading_password">Password</string>
    <string name="subheading_scenario">Scenario</string>
    <string name="subheading_your_character">Your Character</string>
    <string name="hint_create_room">Name your room&#8230;</string>
    <string name="hint_set_password">Set a password&#8230;</string>
    <string name="heading_join_room">JOIN ROOM</string>
    <string name="hint_join_room">Enter room name&#8230;</string>
    <string name="hint_enter_password">Enter password&#8230;</string>
    <string name="heading_team_status">TEAM STATUS</string>
    <string name="heading_your_status">YOUR STATUS:</string>
    <string name="heading_scenario_tasks">SCENARIO TASKS:</string>
    <string name="text_status_fine">FINE</string>
    <string name="button_status_panic">PANIC</string>
    <string name="button_status_need">NEED</string>
    <string name="button_status_dead">DEAD</string>
    <string name="test_status">%s - %s</string>
    <string name="text_no_players">There are no other players on your team yet&#8230;</string>
    <string name="heading_panic_status">PANIC STATUS</string>
    <string name="subheading_provide_info">OPTIONAL: Provide additional info&#8230;</string>
    <string name="hint_typing_options">Start typing to see possible options&#8230;</string>
    <string name="checkbox_panic_downed">I\'m downed!</string>
    <string name="checkbox_panic_danger">I\'m in danger status!</string>
    <string name="checkbox_panic_viral">I have a high viral load!</string>
    <string name="checkbox_panic_trapped">I\'m trapped by enemies!</string>
    <string name="heading_need_status">NEED STATUS</string>
    <string name="subheading_need_query">What do you need?</string>
    <string name="checkbox_need_healing">Healing item</string>
    <string name="checkbox_need_weapon">Weapon</string>
    <string name="checkbox_need_ammo">Ammo</string>
    <string name="checkbox_need_key">Key item</string>
    <string name="heading_dead_status">DEAD STATUS</string>
    <string name="subheading_teammates_items">OPTIONAL: Let your teammates know the items you have&#8230;</string>
    <string name="checkbox_dead_item_1">Item 1</string>
    <string name="checkbox_dead_item_2">Item 2</string>
    <string name="checkbox_dead_item_3">Item 3</string>
    <string name="checkbox_dead_item_4">Item 4</string>
    <string name="checkbox_dead_item_5">Item 5</string>
    <string name="checkbox_dead_item_6">Item 6</string>
    <string name="checkbox_dead_item_7">Item 7</string>
    <string name="checkbox_dead_item_8">Item 8</string>
    <string name="subheading_provide_location">OPTIONAL: Provide your location&#8230;</string>
    <string name="subheading_provide_body_location">OPTIONAL: Provide your body\'s location&#8230;</string>
    <string name="button_status_cancel">CANCEL</string>
    <string name="button_status_submit">SUBMIT</string>
    <string name="task_status_none">No one has planned to do this task.</string>
    <string name="task_status_plan">PLANNED: </string>
    <string name="task_status_in_progress">IN PROGRESS: </string>
    <string name="task_status_complete">COMPLETED: </string>
    <string name="task_set_1_1_1">Escaping J\'s Bar</string>
    <string name="task_set_1_1_2">Evacuating the area</string>
    <string name="task_set_1_1_3">Blowing up Main Street</string>
    <string name="task_1_1_1_1">Barricade the entrance</string>
    <string name="task_1_1_1_2">Unlock the 1F/2F stairway door</string>
    <string name="task_1_1_1_3">Barricade the 2F staff room</string>
    <string name="task_1_1_1_4">Unlock the 2F/3F stairway door</string>
    <string name="task_1_1_1_5">Raise the forklift</string>
    <string name="task_1_1_2_1">Move the cop car in front of J\'s Bar</string>
    <string name="task_1_1_2_2">Move the cop car in front of the apartments</string>
    <string name="task_1_1_2_3">Pour the fuel</string>
    <string name="task_1_1_2_4">Ignite the fuel</string>
    <string name="task_1_1_3_1">Use the detonator</string>
    <string name="task_1_1_3_2">Provide defense</string>
    <string name="task_set_1_2_1">Starting on B7F</string>
    <string name="task_set_1_2_2">Starting on B6F</string>
    <string name="task_set_1_2_3">Escaping the facility</string>
    <string name="task_1_2_1_1">Obtain VP-017</string>
    <string name="task_1_2_1_2">Obtain UMB-03</string>
    <string name="task_1_2_1_3">Use V-JOLT on the plant</string>
    <string name="task_1_2_2_1">Defrost the wrench</string>
    <string name="task_1_2_2_2">Open the Security Center door</string>
    <string name="task_1_2_2_3">Raise the ladder in the Duct</string>
    <string name="task_1_2_3_1">Unlock Computer Room with lab cardkey</string>
    <string name="task_1_2_3_2">Unlock Computer Room with code</string>
    <string name="task_1_2_3_3">Register a fingerprint</string>
    <string name="task_1_2_3_4">Defrost B4F Turn Table</string>
    <string name="task_1_2_3_5">Activate B4F Turn Table</string>
    <string name="task_set_1_3_1">Gaining access</string>
    <string name="task_set_1_3_2">Escaping the hospital</string>
    <string name="task_1_3_1_1">Open the F1 shutters</string>
    <string name="task_1_3_1_2">Unlock B1F Passage door</string>
    <string name="task_1_3_1_3">Enter passcode for B2F elevator access</string>
    <string name="task_1_3_1_4">Enter passcode for rooftop elevator access</string>
    <string name="task_1_3_2_1">Melt Leechman</string>
    <string name="task_1_3_2_2">Unlock B2F Passage door</string>
    <string name="task_1_3_2_3">Unlock boat</string>
    <string name="task_set_1_4_1">Gaining access</string>
    <string name="task_set_1_4_2">Escaping Apple Inn</string>
    <string name="task_1_4_1_1">Unlock Northwest Passage 1 door with silver key</string>
    <string name="task_1_4_1_2">Unlock Power Supply Room with gold key</string>
    <string name="task_1_4_1_3">Unlock Security Office with card key</string>
    <string name="task_1_4_1_4">Unlock Security Office with passcode</string>
    <string name="task_1_4_2_1">Unlock hidden door with red jewel</string>
    <string name="task_1_4_2_2">Activate power for ladder</string>
    <string name="task_set_1_5_1">Gaining access</string>
    <string name="task_set_1_5_2">Obtaining vaccine ingredients</string>
    <string name="task_set_1_5_3">Creating the vaccine and escaping</string>
    <string name="task_1_5_1_1">Obtain and place blue jewel</string>
    <string name="task_1_5_1_2">Obtain and place red jewel</string>
    <string name="task_1_5_1_3">Unlock Testing Passage A</string>
    <string name="task_1_5_1_4">Unlock elevator</string>
    <string name="task_1_5_1_5">Unlock Back Square door</string>
    <string name="task_1_5_2_1">Unlock Water Tank door</string>
    <string name="task_1_5_2_2">Fill sealed test tube with P-Base</string>
    <string name="task_1_5_2_3">Activate power for Emission Tower Elevator</string>
    <string name="task_1_5_2_4">Obtain V-Poison</string>
    <string name="task_1_5_2_5">Obtain T-Blood</string>
    <string name="task_1_5_3_1">Place P-Base</string>
    <string name="task_1_5_3_2">Place V-Poison</string>
    <string name="task_1_5_3_3">Place T-Blood</string>
    <string name="task_1_5_3_4">Reactivate the machine\'s power</string>
    <string name="task_1_5_3_5">Take extra vial(s) of vaccine</string>
    <string-array name="locations_1_1">
        <item>1F of Apartment</item>
        <item>3F to Rooftop Stairway</item>
        <item>Behind the Apartment</item>
        <item>Behind the Residential Area</item>
        <item>Break Room</item>
        <item>Drawing Room</item>
        <item>Footbridge</item>
        <item>In Front of Apple Inn</item>
        <item>In Front of J\'s Bar</item>
        <item>J\'s Bar</item>
        <item>Liquor Room</item>
        <item>Locker Room</item>
        <item>Main Street</item>
        <item>Men\'s Bathroom</item>
        <item>Owner\'s Room</item>
        <item>Rooftop</item>
        <item>Slope Along the Canal</item>
        <item>Staff Room</item>
        <item>Stairs Between 1F and 2F</item>
        <item>Storage Room</item>
        <item>Top Floor of Apartment</item>
        <item>Tunnel</item>
        <item>Wine Room</item>
        <item>Women\'s Bathroom</item>
    </string-array>
    <string-array name="locations_1_2">
        <item>B4F Duct</item>
        <item>B4F East Area Passage</item>
        <item>B4F West Area Passage</item>
        <item>B5F Area B Passage</item>
        <item>B5F Area C Passage</item>
        <item>B5F Duct</item>
        <item>B5F Emergency Passage</item>
        <item>B6F Duct</item>
        <item>B6F North Passage</item>
        <item>B6F South Passage</item>
        <item>B7F Duct</item>
        <item>B7F North Passage</item>
        <item>B7F South Passage</item>
        <item>Break Room</item>
        <item>Chemical Disposal Room</item>
        <item>Chemical Storage Room</item>
        <item>Computer Room</item>
        <item>Culture Room</item>
        <item>Elevator</item>
        <item>Laboratory</item>
        <item>Low Temperature Laboratory</item>
        <item>Main Shaft</item>
        <item>Marshaling Yard</item>
        <item>Platform</item>
        <item>Security Center</item>
        <item>Turntable</item>
        <item>Underground Tunnel</item>
    </string-array>
    <string-array name="locations_1_3">
        <item>1F Passage</item>
        <item>2F Nurses\' Station</item>
        <item>2F Passage</item>
        <item>3F Nurses\' Center</item>
        <item>3F Passage</item>
        <item>B1F Passage</item>
        <item>B1F Passage</item>
        <item>B1F South Passage</item>
        <item>B2F Passage</item>
        <item>B2F Underpass Entrance</item>
        <item>Central Waiting Room</item>
        <item>Doctor Station</item>
        <item>Elevator Control Room</item>
        <item>Examination Room</item>
        <item>Fixed Temperature Laboratory</item>
        <item>Hall</item>
        <item>Laboratory</item>
        <item>Locker Room</item>
        <item>Night Reception</item>
        <item>Office</item>
        <item>Reposing Room</item>
        <item>Rooftop</item>
        <item>Room 202</item>
        <item>Room 302</item>
        <item>Room 303</item>
        <item>Treatment Room</item>
        <item>Waste Liquid Disposal Room</item>
    </string-array>
</resources>