<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/heading_join_room"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/subheading_room_name"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editTextGiveRoomName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="-2dp"
        android:layout_marginEnd="-2dp"
        android:ems="10"
        android:hint="@string/hint_join_room"
        android:inputType="textPersonName" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/subheading_password"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editTextGivePassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="-2dp"
        android:layout_marginEnd="-2dp"
        android:ems="10"
        android:hint="@string/hint_enter_password"
        android:inputType="textPassword" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/subheading_your_character"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/radioGroupCharacter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="-4dp"
        android:layout_marginEnd="-4dp">

        <RadioButton
            android:id="@+id/radioButtonCharacter1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/character_alyssa" />

        <RadioButton
            android:id="@+id/radioButtonCharacter2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/character_cindy" />

        <RadioButton
            android:id="@+id/radioButtonCharacter3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/character_david" />

        <RadioButton
            android:id="@+id/radioButtonCharacter4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/character_george" />

        <RadioButton
            android:id="@+id/radioButtonCharacter5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/character_jim" />

        <RadioButton
            android:id="@+id/radioButtonCharacter6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/character_kevin" />

        <RadioButton
            android:id="@+id/radioButtonCharacter7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/character_mark" />

        <RadioButton
            android:id="@+id/radioButtonCharacter8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/character_yoko" />
    </RadioGroup>

    <Button
        android:id="@+id/buttonJoinRoom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="-2dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="-2dp"
        android:text="@string/heading_join_room"
        android:textSize="18sp" />
</LinearLayout>