<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/heading_main_menu"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textViewUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/text_no_username"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/editTextUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="-2dp"
        android:layout_marginEnd="-2dp"
        android:ems="10"
        android:hint="@string/hint_enter_username"
        android:inputType="textPersonName"
        android:textSize="20sp" />

    <Button
        android:id="@+id/buttonSetUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="-2dp"
        android:layout_marginEnd="-2dp"
        android:text="@string/button_set_username"
        android:textSize="20sp" />

    <Button
        android:id="@+id/buttonMainCreateRoom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="-2dp"
        android:layout_marginEnd="-2dp"
        android:text="@string/heading_create_room"
        android:textSize="20sp" />

    <Button
        android:id="@+id/buttonMainJoinRoom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="-2dp"
        android:layout_marginEnd="-2dp"
        android:text="@string/heading_join_room"
        android:textSize="20sp" />

    <ProgressBar
        android:id="@+id/progressBarMainMenu"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true" />

    <TextView
        android:id="@+id/textViewRejoinYourRooms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/heading_rejoin_rooms"
        android:textAlignment="center"
        android:textColor="#1976D2"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textViewNoRoomsMsg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/text_no_rooms"
        android:textSize="16sp"
        android:textStyle="italic" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewJoinedRooms"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="8dp" />
</LinearLayout>