<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollViewControlPanel"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayoutControlPanel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textViewRoomName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:textSize="12sp"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="ROOM: Kelly don't die lol" />

        <TextView
            android:id="@+id/textViewTeamStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/heading_team_status"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewRoomName" />

        <TextView
            android:id="@+id/textViewNoPlayersMsg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/text_no_players"
            android:textSize="16sp"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewTeamStatus"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewTeamStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewTeamStatus" />

        <LinearLayout
            android:id="@+id/linearLayoutStatusButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewPlayerCharacterName">

            <Button
                android:id="@+id/buttonStatusPanic"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:text="@string/button_status_panic"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/buttonStatusNeed"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:text="@string/button_status_need"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/buttonStatusDead"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:text="@string/button_status_dead"
                tools:ignore="ButtonStyle" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/taskSet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewScenarioName">

            <ImageButton
                android:id="@+id/buttonPreviousTaskSet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@android:drawable/ic_media_rew" />

            <TextView
                android:id="@+id/textViewTaskSetName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textSize="20sp"
                tools:text="Creating the vaccine and escaping" />

            <ImageButton
                android:id="@+id/buttonNextTaskSet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@android:drawable/ic_media_ff" />


        </LinearLayout>

        <TextView
            android:id="@+id/textViewPlayerCharacterName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:textSize="20sp"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textViewYourStatus"
            app:layout_constraintTop_toTopOf="@id/textViewYourStatus"
            tools:text="ALYSSA" />

        <TextView
            android:id="@+id/textViewScenarioTasks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/heading_scenario_tasks"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayoutStatusButtons" />

        <TextView
            android:id="@+id/textViewScenarioName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:textSize="20sp"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textViewScenarioTasks"
            app:layout_constraintTop_toTopOf="@+id/textViewScenarioTasks"
            tools:text="OUTBREAK" />

        <TextView
            android:id="@+id/textViewYourStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/heading_your_status"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recyclerViewTeamStatus" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewTasks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/taskSet" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>